--- a/MyFirstPlugin/pom.xml
+++ b/MyFirstPlugin/pom.xml
@@ -18,6 +18,7 @@
     </properties>
 
     <build>
+        <defaultGoal>install</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
